testsuite/poke.pkl/cast-diag-6.pk
/* { dg-do compile } */

defun foo = string:
  {
   return 666 as int[]; /* { dg-error "" } */
  }
